--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 			<div class="row">
 				<div class="col-md-5 col-lg-4">
 					<div class="caja-img">
-						<img src="img/trabajo1.jpg" class="porta">
+						<img src="img/trabajo3.jpg" class="porta">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 					</div>	
@@ -238,7 +238,7 @@
 				</div>
 				<div class="col-md-5 col-lg-4 text-lg-right">
 					<div class="caja-img">
-						<img src="img/trabajo3.jpg" class="porta">
+						<img src="img/trabajo2.jpg" class="porta">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 					</div>
@@ -248,11 +248,51 @@
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 					</div>
 					<div class="caja-img">
-						<img src="img/trabajo1.jpg" class="porta">
+						<img src="img/trabajo3.jpg" class="porta">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 					</div>
 				</div>
+			</div>
+		</article>
+		<article class="hidden-sm-up container">
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+    				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  				</ol>
+  				<div class="carousel-inner" role="listbox">
+    				<div class="carousel-item active">
+      					<img src="img/trabajo2.jpg" alt="First slide">
+      					<div class="carousel-caption">
+    						<h6>DEMO TRELLO</h6>
+    						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
+  						</div>
+    				</div>
+    				<div class="carousel-item">
+      					<img src="img/trabajo3.jpg" alt="Second slide">
+      					<div class="carousel-caption">
+    						<h6>DEMO TRELLO</h6>
+    						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
+  						</div>
+    				</div>
+    				<div class="carousel-item">
+      					<img src="img/trabajo2.jpg" alt="Third slide">
+      					<div class="carousel-caption">
+    						<h6>DEMO TRELLO</h6>
+    						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
+  						</div>
+    				</div>
+  				</div>
+  				<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    				<span class="icon-prev" aria-hidden="true"></span>
+  	  				<span class="sr-only">Previous</span>
+  				</a>
+  				<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+   					<span class="icon-next" aria-hidden="true"></span>
+    				<span class="sr-only">Next</span>
+  				</a>
 			</div>
 		</article>
 	</section>
