añadiendo carousel mobile

--- a/index.html
+++ b/index.html
@@ -264,21 +264,24 @@
   				</ol>
   				<div class="carousel-inner" role="listbox">
     				<div class="carousel-item active">
-      					<img src="img/trabajo2.jpg" alt="First slide">
+      					<div class="prueba"></div>
+      					<!-- <img src="img/trabajo2.jpg" alt="First slide"> -->
       					<div class="carousel-caption">
     						<h6>DEMO TRELLO</h6>
     						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
   						</div>
     				</div>
     				<div class="carousel-item">
-      					<img src="img/trabajo3.jpg" alt="Second slide">
+      					<div class="prueba"></div>
+      					<!-- <img src="img/trabajo3.jpg" alt="Second slide"> -->
       					<div class="carousel-caption">
     						<h6>DEMO TRELLO</h6>
     						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
   						</div>
     				</div>
     				<div class="carousel-item">
-      					<img src="img/trabajo2.jpg" alt="Third slide">
+      					<div class="prueba"></div>
+      					<!-- <img src="img/trabajo2.jpg" alt="Third slide"> -->
       					<div class="carousel-caption">
     						<h6>DEMO TRELLO</h6>
     						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
