--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 				</div>
 			</div>
 		</article>
-		<article class="hidden-sm-up container">
+		<article class="hidden-sm-up container-fluid">
 			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
     				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -264,25 +264,25 @@
   				</ol>
   				<div class="carousel-inner" role="listbox">
     				<div class="carousel-item active">
-      					<div class="prueba"></div>
+      					<div class="proy-1"></div>
       					<!-- <img src="img/trabajo2.jpg" alt="First slide"> -->
-      					<div class="carousel-caption">
+      					<div class="carousel-caption descripcion">
     						<h6>DEMO TRELLO</h6>
     						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
   						</div>
     				</div>
     				<div class="carousel-item">
-      					<div class="prueba"></div>
+      					<div class="proy-2"></div>
       					<!-- <img src="img/trabajo3.jpg" alt="Second slide"> -->
-      					<div class="carousel-caption">
+      					<div class="carousel-caption descripcion">
     						<h6>DEMO TRELLO</h6>
     						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
   						</div>
     				</div>
     				<div class="carousel-item">
-      					<div class="prueba"></div>
+      					<div class="proy-3"></div>
       					<!-- <img src="img/trabajo2.jpg" alt="Third slide"> -->
-      					<div class="carousel-caption">
+      					<div class="carousel-caption descripcion">
     						<h6>DEMO TRELLO</h6>
     						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
   						</div>
