añadiendo color responsive

--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
   				</ul>
   			</nav>  
 		</div>
-		<div class="menuMobile container m-x-0 hidden-sm-up">
+		<div class="menuMobile container m-x-0 hidden-sm-up font-weight-bold">
   			<div class="listaMobile">
   				<div class="row">
   					<div class="col-xs-9">
-	  					<div id="conoceme">Conóceme</div>  					
+	  					<div id="in-mob">Intro</div> 
+  					</div>
+  					<div class="col-xs-3">
+			  			<i class="fa fa-home"></i>			
+  					</div>
+  				</div>
+  				<div class="row">
+  					<div class="col-xs-9">
+	  					<div id="con-mob">Conóceme</div>  					
   					</div>
   					<div class="col-xs-3">
 			  			<i class="fa fa-key"></i>			
@@ -36,7 +44,7 @@
   				</div>
   				<div class="row">
   					<div class="col-xs-9">
-		      			<div id="skills">Habilidades</div>
+		      			<div id="hab-mob">Habilidades</div>
   					</div>
   					<div class="col-xs-3">
 			  			<i class="fa fa-flash"></i>			
@@ -44,7 +52,7 @@
   				</div>
   				<div class="row">
   					<div class="col-xs-9">
-		      			<div id="port">Mi portafolio</div>				
+		      			<div id="port-mob">Mi portafolio</div>				
   					</div>
   					<div class="col-xs-3">
 			  			<i class="fa fa-book"></i>			
@@ -60,7 +68,7 @@
   				</div>
   				<div class="row">
   					<div class="col-xs-9">
-						<div id="contact">Contacto</div>
+						<div id="contact-mob">Contacto</div>
   					</div>
   					<div class="col-xs-3">
 			  			<i class="fa fa-envelope"></i>			
@@ -265,7 +273,6 @@
   				<div class="carousel-inner" role="listbox">
     				<div class="carousel-item active">
       					<div class="proy-1"></div>
-      					<!-- <img src="img/trabajo2.jpg" alt="First slide"> -->
       					<div class="carousel-caption descripcion">
     						<h6>DEMO TRELLO</h6>
     						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
@@ -273,7 +280,6 @@
     				</div>
     				<div class="carousel-item">
       					<div class="proy-2"></div>
-      					<!-- <img src="img/trabajo3.jpg" alt="Second slide"> -->
       					<div class="carousel-caption descripcion">
     						<h6>DEMO TRELLO</h6>
     						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
@@ -281,7 +287,6 @@
     				</div>
     				<div class="carousel-item">
       					<div class="proy-3"></div>
-      					<!-- <img src="img/trabajo2.jpg" alt="Third slide"> -->
       					<div class="carousel-caption descripcion">
     						<h6>DEMO TRELLO</h6>
     						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
