--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 	<section class="presentacion">
 		<article class="container">
 						<h2>Conóceme</h2>
-			<div class="row m-t-1 p-x-3">
-				<div class="col-xs-12 col-sm-5 col-md-6 col-lg-6 ego text-xs-center">
+			<div class="row m-t-1">
+				<div class="col-xs-12 col-sm-5 col-md-6 col-lg-6 ego text-xs-center text-sm-left text-lg-left">
 					<img src="img/miaw.jpg">
 				</div>
 				<div class="col-xs-12 col-sm-7 col-md-6 col-lg-6 perfil">
@@ -211,97 +211,114 @@
 		</article>
 	</section>
 	<section id="portafolio">
-		<article class="portafolio container hidden-xs-down">
-			<h2 class="text-xs-center">PORTAFOLIO</h2>
-			<div class="row">
-				<div class="col-md-5 col-lg-4">
-					<div class="caja-img">
-						<img src="img/trabajo3.jpg" class="porta">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-					</div>	
-					<div class="caja-img">
-						<img src="img/trabajo2.jpg" class="porta">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-					</div>
-					<div class="caja-img">
-						<img src="img/trabajo3.jpg" class="porta">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-					</div>
+		<article class="container text-xs-center">
+			<h2>MI PORTAFOLIO</h2>
+			<i class="fa fa-laptop fa-2x"></i><input type='radio' name='device' id='laptop' checked/>
+			<i class="fa fa-tablet fa-2x"></i><input type='radio' name='device' id='tablet'/>
+			<i class="fa fa-mobile fa-2x"></i><input type='radio' name='device' id='phone'/>
+			<input type='checkbox' id='rotate' class="m-l-1" /> 
+				<label for='rotate'>Rotate</label>
+				<div class='device'>
+  					<div class='laptop'>
+  						<nav class="menu-porta">
+  							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-laptop" aria-controls="menu-laptop" aria-expanded="false" aria-label="Toggle navigation">☰</button>
+  							<div class="collapse" id="menu-laptop">
+    							<div class="bg-inverse p-x-1">
+									<div class="row">
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>	
+									</div>
+									<div class="row">
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>	
+									</div>
+									<div class="row">
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>
+										<div class="col-lg-6 p-y-1">
+											<img src="img/trabajo2.jpg">
+										</div>	
+									</div>
+    							</div>
+  							</div>
+						</nav>
+  					</div>
+  					<div class='phone'>
+  						<nav class="menu-porta">
+  							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-phone" aria-controls="menu-phone" aria-expanded="false" aria-label="Toggle navigation">☰</button>
+  							<div class="collapse" id="menu-phone">
+    							<div class="bg-inverse p-x-1">
+									<div class="row">
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>	
+									</div>
+									<div class="row">
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>	
+									</div>
+									<div class="row">
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>
+										<div class="col-lg-6 p-y-1">
+											<img src="img/trabajo2.jpg">
+										</div>	
+									</div>
+    							</div>
+  							</div>
+						</nav>
+  					</div>
+  					<div class='tablet'>
+  						<nav class="menu-porta">
+  							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-tablet" aria-controls="menu-tablet" aria-expanded="false" aria-label="Toggle navigation">☰</button>
+  							<div class="collapse" id="menu-tablet">
+    							<div class="bg-inverse p-x-1">
+									<div class="row">
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>	
+									</div>
+									<div class="row">
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>	
+									</div>
+									<div class="row">
+										<div class="col-lg-6 p-t-1">
+											<img src="img/trabajo2.jpg">
+										</div>
+										<div class="col-lg-6 p-y-1">
+											<img src="img/trabajo2.jpg">
+										</div>	
+									</div>
+    							</div>
+  							</div>
+						</nav>
+  					</div>
 				</div>
-				<div class="col-md-2 col-lg-4 text-xs-center lista m-t-3">
-					<li class="media-object">Portafolio</li>
-					<hr>
-					<li class="media-object">Trello</li>
-					<hr>
-					<li class="media-object">user</li>
-					<hr>
-					<li class="media-object">blog</li>
-					<hr>
-					<li class="media-object">bingo</li>
-					<hr>
-					<li class="media-object">apagon</li>
-				</div>
-				<div class="col-md-5 col-lg-4 text-lg-right">
-					<div class="caja-img">
-						<img src="img/trabajo2.jpg" class="porta">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-					</div>
-					<div class="caja-img">
-						<img src="img/trabajo2.jpg" class="porta">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-					</div>
-					<div class="caja-img">
-						<img src="img/trabajo3.jpg" class="porta">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-					</div>
-				</div>
-			</div>
-		</article>
-		<article class="hidden-sm-up container-fluid">
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-    				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  				</ol>
-  				<div class="carousel-inner" role="listbox">
-    				<div class="carousel-item active">
-      					<div class="proy-1"></div>
-      					<div class="carousel-caption descripcion">
-    						<h6>DEMO TRELLO</h6>
-    						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
-  						</div>
-    				</div>
-    				<div class="carousel-item">
-      					<div class="proy-2"></div>
-      					<div class="carousel-caption descripcion">
-    						<h6>DEMO TRELLO</h6>
-    						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
-  						</div>
-    				</div>
-    				<div class="carousel-item">
-      					<div class="proy-3"></div>
-      					<div class="carousel-caption descripcion">
-    						<h6>DEMO TRELLO</h6>
-    						<p>Proyecto en el que buscamos simular la página de trello, conocida agenda virtual</p>
-  						</div>
-    				</div>
-  				</div>
-  				<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    				<span class="icon-prev" aria-hidden="true"></span>
-  	  				<span class="sr-only">Previous</span>
-  				</a>
-  				<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-   					<span class="icon-next" aria-hidden="true"></span>
-    				<span class="sr-only">Next</span>
-  				</a>
-			</div>
 		</article>
 	</section>
 	<section id="contacto">
@@ -309,18 +326,22 @@
 			<h2 class="text-xs-center contactame">CONTACTO</h2>
 			<div class="row text-xs-center m-y-3">
 				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-					<i class="fa-facebook-official fa fa-5x"></i>	
+					<a target="_blank" href="https://www.github.com/spectrecode"><i class="fa-github fa fa-5x"></i></a>	
 				</div>
 				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-					<i class="fa-linkedin-square fa fa-5x"></i>	
+					<a target="_blank" href="https://www.linkedin.com/in/christy-ccb"><i class="fa-linkedin-square fa fa-5x"></i></a>
 				</div>
 				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-					<i class="fa-envelope fa fa-5x"></i>	
+					<a href="mailto:mchristy.ccb@gmail.com">
+						<i class="fa-envelope fa fa-5x"></i>
+					</a>
 				</div>
 			</div>
 			<div class="col-xs-12 text-xs-center">
 				<p class="m-b-3">¡Descarga mi curriculo aqui!</p>
-				<i class="fa-download fa fa-5x m-t-3"></i>
+				<a target="_blank" href="https://drive.google.com/open?id=0B9ZTLTs1EgvZOGs3Y0QzNlJkTVk">	
+					<i class="fa-download fa fa-5x m-t-3"></i>
+				</a>
 			</div>
 		</article>
 	</section>  
