--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 			<i class="fa fa-laptop fa-2x"></i><input type='radio' name='device' id='laptop' checked/>
 			<i class="fa fa-tablet fa-2x"></i><input type='radio' name='device' id='tablet'/>
 			<i class="fa fa-mobile fa-2x"></i><input type='radio' name='device' id='phone'/>
-			<input type='checkbox' id='rotate' class="m-l-1" /> 
+			<input type='checkbox' id='rotate'/> 
 				<label for='rotate'>Rotate</label>
 				<div class='device'>
   					<div class='laptop'>
