--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<section class="presentacion">
 		<article class="container">
 						<h2>Conóceme</h2>
-			<div class="row m-t-1">
+			<div class="row m-t-1 modal-open">
 				<div class="col-xs-12 col-sm-5 col-md-6 col-lg-6 ego text-xs-center text-sm-left text-lg-left">
 					<img src="img/miaw.jpg">
 				</div>
