--- a/index.html
+++ b/index.html
@@ -212,12 +212,13 @@
 	</section>
 	<section id="portafolio">
 		<article class="container text-xs-center">
-			<h2>MI PORTAFOLIO</h2>
-			<i class="fa fa-laptop fa-2x"></i><input type='radio' name='device' id='laptop' checked/>
-			<i class="fa fa-tablet fa-2x"></i><input type='radio' name='device' id='tablet'/>
-			<i class="fa fa-mobile fa-2x"></i><input type='radio' name='device' id='phone'/>
-			<input type='checkbox' id='rotate'/> 
-				<label for='rotate'>Rotate</label>
+			<div class="lap-porta p-t-3">
+				<i class="fa fa-laptop fa-3x">
+				</i><input type='radio' name='device' id='laptop' checked/>
+				<i class="fa fa-tablet fa-3x"></i><input type='radio' name='device' id='tablet'/>
+				<i class="fa fa-mobile fa-3x"></i><input type='radio' name='device' id='phone' class="m-r-2" />
+				<input type='checkbox' id='rotate'/> 
+				<label for='rotate' class="m-r-1">Rotate</label>
 				<div class='device'>
   					<div class='laptop'>
   						<nav class="menu-porta">
@@ -319,6 +320,7 @@
 						</nav>
   					</div>
 				</div>
+			</div>
 		</article>
 	</section>
 	<section id="contacto">
