añadiendo elementos al portafolio

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     							<div class="bg-inverse p-x-1">
 									<div class="row">
 										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
+											<img src="img/trabajo1.jpg">
 										</div>
 										<div class="col-lg-6 p-t-1">
 											<img src="img/trabajo2.jpg">
@@ -235,23 +235,52 @@
 									</div>
 									<div class="row">
 										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
+											<img src="img/trabajo3.jpg">
 										</div>
 										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
+											<img src="img/trabajo4.jpg">
 										</div>	
 									</div>
-									<div class="row">
+									<!-- <div class="row">
 										<div class="col-lg-6 p-t-1">
 											<img src="img/trabajo2.jpg">
 										</div>
 										<div class="col-lg-6 p-y-1">
 											<img src="img/trabajo2.jpg">
 										</div>	
-									</div>
+									</div> -->
     							</div>
   							</div>
 						</nav>
+						<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  							<ol class="carousel-indicators">
+								<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+								<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+								<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  							</ol>
+  							<div class="carousel-inner" role="listbox">
+    							<div class="carousel-item active">
+      								<div class="car-lap-trello"></div>
+    							</div>
+								<div class="carousel-item">
+      								<div class="car-lap-blog"></div>
+    							</div>
+    							<div class="carousel-item">
+      								<div class="car-lap-porta"></div>
+    							</div>
+    							<div class="carousel-item">
+      								<div class="car-lap-user"></div>
+    							</div>
+  							</div>
+  							<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    							<span class="icon-prev" aria-hidden="true"></span>
+    							<span class="sr-only">Previous</span>
+  							</a>
+  							<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    							<span class="icon-next" aria-hidden="true"></span>
+    							<span class="sr-only">Next</span>
+  							</a>
+						</div>
   					</div>
   					<div class='phone'>
   						<nav class="menu-porta">
@@ -260,7 +289,7 @@
     							<div class="bg-inverse p-x-1">
 									<div class="row">
 										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
+											<img src="img/trabajo1.jpg">
 										</div>
 										<div class="col-lg-6 p-t-1">
 											<img src="img/trabajo2.jpg">
@@ -268,23 +297,52 @@
 									</div>
 									<div class="row">
 										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
+											<img src="img/trabajo3.jpg">
 										</div>
 										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
+											<img src="img/trabajo4.jpg">
 										</div>	
 									</div>
-									<div class="row">
+									<!-- <div class="row">
 										<div class="col-lg-6 p-t-1">
 											<img src="img/trabajo2.jpg">
 										</div>
 										<div class="col-lg-6 p-y-1">
 											<img src="img/trabajo2.jpg">
 										</div>	
-									</div>
+									</div> -->
     							</div>
   							</div>
 						</nav>
+						<div id="carousel-phone" class="carousel slide" data-ride="carousel">
+  							<ol class="carousel-indicators">
+								<li data-target="#carousel-phone" data-slide-to="0" class="active"></li>
+								<li data-target="#carousel-phone" data-slide-to="1"></li>
+								<li data-target="#carousel-phone" data-slide-to="2"></li>
+  							</ol>
+  							<div class="carousel-inner" role="listbox">
+    							<div class="carousel-item active">
+      								<div class="car-lap-trello"></div>
+    							</div>
+								<div class="carousel-item">
+      								<div class="car-lap-blog"></div>
+    							</div>
+    							<div class="carousel-item">
+      								<div class="car-lap-porta"></div>
+    							</div>
+    							<div class="carousel-item">
+      								<div class="car-lap-user"></div>
+    							</div>
+  							</div>
+  							<a class="left carousel-control" href="#carousel-phone" role="button" data-slide="prev">
+    							<span class="icon-prev" aria-hidden="true"></span>
+    							<span class="sr-only">Previous</span>
+  							</a>
+  							<a class="right carousel-control" href="#carousel-phone" role="button" data-slide="next">
+    							<span class="icon-next" aria-hidden="true"></span>
+    							<span class="sr-only">Next</span>
+  							</a>
+						</div>
   					</div>
   					<div class='tablet'>
   						<nav class="menu-porta">
@@ -293,7 +351,7 @@
     							<div class="bg-inverse p-x-1">
 									<div class="row">
 										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
+											<img src="img/trabajo1.jpg">
 										</div>
 										<div class="col-lg-6 p-t-1">
 											<img src="img/trabajo2.jpg">
@@ -301,23 +359,52 @@
 									</div>
 									<div class="row">
 										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
+											<img src="img/trabajo3.jpg">
 										</div>
 										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
+											<img src="img/trabajo4.jpg">
 										</div>	
 									</div>
-									<div class="row">
+<!-- 									<div class="row">
 										<div class="col-lg-6 p-t-1">
 											<img src="img/trabajo2.jpg">
 										</div>
 										<div class="col-lg-6 p-y-1">
 											<img src="img/trabajo2.jpg">
 										</div>	
-									</div>
+									</div> -->
     							</div>
   							</div>
 						</nav>
+						<div id="carousel-tablet" class="carousel slide" data-ride="carousel">
+  							<ol class="carousel-indicators">
+								<li data-target="#carousel-tablet" data-slide-to="0" class="active"></li>
+								<li data-target="#carousel-tablet" data-slide-to="1"></li>
+								<li data-target="#carousel-tablet" data-slide-to="2"></li>
+  							</ol>
+  							<div class="carousel-inner" role="listbox">
+    							<div class="carousel-item active">
+      								<div class="car-lap-trello"></div>
+    							</div>
+								<div class="carousel-item">
+      								<div class="car-lap-blog"></div>
+    							</div>
+    							<div class="carousel-item">
+      								<div class="car-lap-porta"></div>
+    							</div>
+    							<div class="carousel-item">
+      								<div class="car-lap-user"></div>
+    							</div>
+  							</div>
+  							<a class="left carousel-control" href="#carousel-tablet" role="button" data-slide="prev">
+    							<span class="icon-prev" aria-hidden="true"></span>
+    							<span class="sr-only">Previous</span>
+  							</a>
+  							<a class="right carousel-control" href="#carousel-tablet" role="button" data-slide="next">
+    							<span class="icon-next" aria-hidden="true"></span>
+    							<span class="sr-only">Next</span>
+  							</a>
+						</div>
   					</div>
 				</div>
 			</div>
