realizando descripcion a portafolio

--- a/index.html
+++ b/index.html
@@ -260,16 +260,33 @@
   							</ol>
   							<div class="carousel-inner" role="listbox">
     							<div class="carousel-item active">
-      								<div class="car-lap-trello"></div>
+      								<div class="car-lap-trello">
+      									<div class="desc-trello-porta">
+      									<h4>DEMO TRELLO</h4>
+      									Una página creada en similitud a la agenda virtual trello; se hizo con HTML, CSS, bootstrap y javascript puro</div>
+      								</div>
     							</div>
 								<div class="carousel-item">
-      								<div class="car-lap-blog"></div>
+      								<div class="car-lap-blog">
+      									<div class="desc-blog-porta">
+      									<h4>RESPONSIVE BLOG</h4>
+      									Bonita pagina simulando un blog; fue realizado con HTML, CSS y como estructura se uso la grilla Dallas Simple Grid</a></div>
+      								</div>
     							</div>
     							<div class="carousel-item">
-      								<div class="car-lap-porta"></div>
+      								<div class="car-lap-port">
+      									<div class="desc-port-porta">
+      									<h4>DEMO MI PORTAFOLIO</h4>
+      									Hicimos una página simulando un portafolio; se usó HTML, CSS y como estructura se utilizo la grilla Simple Grid.</div>
+      								</div>
     							</div>
     							<div class="carousel-item">
-      								<div class="car-lap-user"></div>
+      								<div class="car-lap-user">
+      									<div class="desc-user-porta">
+      									<h4>USER TESTING</h4>
+      									Simulacion de interfaz de una página que testea y/o contabiliza la cantidad de personas que visitan un sitio web; realizado con HTML, CSS y como estructura una grilla llamada simple grid.
+      									</div>
+      								</div>
     							</div>
   							</div>
   							<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -328,7 +345,7 @@
       								<div class="car-lap-blog"></div>
     							</div>
     							<div class="carousel-item">
-      								<div class="car-lap-porta"></div>
+      								<div class="car-lap-port"></div>
     							</div>
     							<div class="carousel-item">
       								<div class="car-lap-user"></div>
@@ -390,7 +407,7 @@
       								<div class="car-lap-blog"></div>
     							</div>
     							<div class="carousel-item">
-      								<div class="car-lap-porta"></div>
+      								<div class="car-lap-port"></div>
     							</div>
     							<div class="carousel-item">
       								<div class="car-lap-user"></div>
