--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
 								<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 								<li data-target="#carousel-example-generic" data-slide-to="1"></li>
 								<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+								<li data-target="#carousel-example-generic" data-slide-to="3"></li>  							
   							</ol>
   							<div class="carousel-inner" role="listbox">
     							<div class="carousel-item active">
@@ -336,6 +337,7 @@
 								<li data-target="#carousel-phone" data-slide-to="0" class="active"></li>
 								<li data-target="#carousel-phone" data-slide-to="1"></li>
 								<li data-target="#carousel-phone" data-slide-to="2"></li>
+								<li data-target="#carousel-phone" data-slide-to="3"></li>
   							</ol>
   							<div class="carousel-inner" role="listbox">
     							<div class="carousel-item active">
@@ -398,6 +400,7 @@
 								<li data-target="#carousel-tablet" data-slide-to="0" class="active"></li>
 								<li data-target="#carousel-tablet" data-slide-to="1"></li>
 								<li data-target="#carousel-tablet" data-slide-to="2"></li>
+								<li data-target="#carousel-tablet" data-slide-to="3"></li>
   							</ol>
   							<div class="carousel-inner" role="listbox">
     							<div class="carousel-item active">
