añadiendo responsive laptop

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 		<article class="container">
 						<h2>Conóceme</h2>
 			<div class="row m-t-1 modal-open">
-				<div class="col-xs-12 col-sm-5 col-md-6 col-lg-6 ego text-xs-center text-sm-left text-lg-left">
+				<div class="col-xs-12 col-sm-5 col-md-6 col-lg-6 col-xl-6 ego text-xs-center text-sm-left text-lg-left">
 					<img src="img/miaw.jpg">
 				</div>
-				<div class="col-xs-12 col-sm-7 col-md-6 col-lg-6 perfil">
+				<div class="col-xs-12 col-sm-7 col-md-6 col-lg-6 col-xl-6 perfil">
 					<p class="me text-justify">Mi nombre es Christy Castro Cuba Bazan y estoy en la busqueda de nuevos retos y aprendizaje. Ahora soy desarrolladora Front-end y mañana sere una gran programadora, diseñadora grafica, y muchas cosas mas que sumen mi nivel profesional en el sector tec; para esto mi meta es demostrar mis conocimientos y habilidades en una gran empresa y sumar continua experiencia en este largo y apasionante mundo que es la programacion y diseño web
 					</p>
 				</div>
