--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
  	</section>
 	<section class="presentacion">
 		<article class="container">
-						<h2>Conóceme</h2>
+			<div class="caja-titulo">
+				<h2>Conóceme</h2>
+			</div>
 			<div class="row m-t-1 modal-open">
 				<div class="col-xs-12 col-sm-5 col-md-6 col-lg-6 col-xl-6 ego text-xs-center text-sm-left text-lg-left">
 					<img src="img/miaw.jpg">
@@ -99,8 +101,10 @@
 	</section>
 	<section id="power">
 		<article class="container skills hidden-xs-down">
-			<h2>Skills</h2>
-			<div class="row ch-grid text-xs-center">
+			<div class="caja-titulo">
+				<h2>Skills</h2>			
+			</div>
+			<div class="row ch-grid text-xs-center m-t-1">
 				<div class="col-sm-4 col-md-4 col-lg-4 ch-item">
 					<div class="ch-info">
 						<div class="ch-info-front ch-img-1">
@@ -424,7 +428,10 @@
 	</section>
 	<section id="contacto">
 		<article class="contacto container">
-			<h2 class="contactame"></h2>
+			<div class="caja-titulo">
+			    <div id="spinner" class="title rotate">/</div>
+				<h2 class="contactame">CONTACTAME</h2>			
+			</div>
 			<div class="row text-xs-center m-y-3">
 				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 					<a target="_blank" href="https://www.github.com/spectrecode"><i class="fa-github fa fa-5x"></i></a>	
@@ -439,7 +446,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 text-xs-center">
-				<p class="m-b-3">¡Descarga mi curriculo aqui!</p>
+				<p class="m-b-3">¡Descarga mi curriculum vitae aqui!</p>
 				<a target="_blank" href="https://drive.google.com/open?id=0B9ZTLTs1EgvZOGs3Y0QzNlJkTVk">	
 					<i class="fa-download fa fa-5x m-t-3"></i>
 				</a>
