cambios de diseño portafolio

--- a/index.html
+++ b/index.html
@@ -225,37 +225,6 @@
 				<label for='rotate' class="m-r-1">Rotate</label>
 				<div class='device'>
   					<div class='laptop'>
-  						<nav class="menu-porta">
-  							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-laptop" aria-controls="menu-laptop" aria-expanded="false" aria-label="Toggle navigation">☰</button>
-  							<div class="collapse" id="menu-laptop">
-    							<div class="bg-inverse p-x-1">
-									<div class="row">
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo1.jpg">
-										</div>
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
-										</div>	
-									</div>
-									<div class="row">
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo3.jpg">
-										</div>
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo4.jpg">
-										</div>	
-									</div>
-									<!-- <div class="row">
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
-										</div>
-										<div class="col-lg-6 p-y-1">
-											<img src="img/trabajo2.jpg">
-										</div>	
-									</div> -->
-    							</div>
-  							</div>
-						</nav>
 						<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   							<ol class="carousel-indicators">
 								<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -267,29 +236,32 @@
     							<div class="carousel-item active">
       								<div class="car-lap-trello">
       									<div class="desc-trello-porta">
-      									<h4>DEMO TRELLO</h4>
-      									Una página creada en similitud a la agenda virtual trello; se hizo con HTML, CSS, bootstrap y javascript puro</div>
+      										<h4 class="p-t-3">DEMO TRELLO</h4>
+      										<p class="p-b-3">Una página creada en similitud a la agenda virtual trello; se hizo con HTML, CSS, bootstrap y javascript puro.</p>
+      									</div>
       								</div>
     							</div>
 								<div class="carousel-item">
       								<div class="car-lap-blog">
       									<div class="desc-blog-porta">
-      									<h4>RESPONSIVE BLOG</h4>
-      									Bonita pagina simulando un blog; fue realizado con HTML, CSS y como estructura se uso la grilla Dallas Simple Grid</a></div>
+      										<h4 class="p-t-3">RESPONSIVE BLOG</h4>
+      										<p class="p-b-3">Bonita pagina simulando un blog; fue realizado con HTML, CSS y como estructura se uso la grilla Dallas Simple Grid.</p>
+      									</div>
       								</div>
     							</div>
     							<div class="carousel-item">
-      								<div class="car-lap-port">
-      									<div class="desc-port-porta">
-      									<h4>DEMO MI PORTAFOLIO</h4>
-      									Hicimos una página simulando un portafolio; se usó HTML, CSS y como estructura se utilizo la grilla Simple Grid.</div>
+      								<div class="car-lap-eco">
+      									<div class="desc-eco-porta">
+      										<h4 class="p-t-3">ECOMUNIDAD</h4>
+      										<p class="p-b-3">Hicimos una página simulando un portafolio; se usó HTML, CSS y como estructura se utilizo la grilla Simple Grid.</p>
+      									</div>
       								</div>
     							</div>
     							<div class="carousel-item">
       								<div class="car-lap-user">
       									<div class="desc-user-porta">
-      									<h4>USER TESTING</h4>
-      									Simulacion de interfaz de una página que testea y/o contabiliza la cantidad de personas que visitan un sitio web; realizado con HTML, CSS y como estructura una grilla llamada simple grid.
+	      									<h4 class="p-t-3">USER TESTING</h4>
+	      									<p class="p-b-3">Simulacion de interfaz de una página que testea y/o contabiliza la cantidad de personas que visitan un sitio web; realizado con HTML, CSS y como estructura una grilla llamada simple grid.</p>
       									</div>
       								</div>
     							</div>
@@ -305,37 +277,6 @@
 						</div>
   					</div>
   					<div class='phone'>
-  						<nav class="menu-porta">
-  							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-phone" aria-controls="menu-phone" aria-expanded="false" aria-label="Toggle navigation">☰</button>
-  							<div class="collapse" id="menu-phone">
-    							<div class="bg-inverse p-x-1">
-									<div class="row">
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo1.jpg">
-										</div>
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
-										</div>	
-									</div>
-									<div class="row">
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo3.jpg">
-										</div>
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo4.jpg">
-										</div>	
-									</div>
-									<!-- <div class="row">
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
-										</div>
-										<div class="col-lg-6 p-y-1">
-											<img src="img/trabajo2.jpg">
-										</div>	
-									</div> -->
-    							</div>
-  							</div>
-						</nav>
 						<div id="carousel-phone" class="carousel slide" data-ride="carousel">
   							<ol class="carousel-indicators">
 								<li data-target="#carousel-phone" data-slide-to="0" class="active"></li>
@@ -351,7 +292,7 @@
       								<div class="car-lap-blog"></div>
     							</div>
     							<div class="carousel-item">
-      								<div class="car-lap-port"></div>
+      								<div class="car-lap-eco"></div>
     							</div>
     							<div class="carousel-item">
       								<div class="car-lap-user"></div>
@@ -368,29 +309,6 @@
 						</div>
   					</div>
   					<div class='tablet'>
-  						<nav class="menu-porta">
-  							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-tablet" aria-controls="menu-tablet" aria-expanded="false" aria-label="Toggle navigation">☰</button>
-  							<div class="collapse" id="menu-tablet">
-    							<div class="bg-inverse p-x-1">
-									<div class="row">
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo1.jpg">
-										</div>
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo2.jpg">
-										</div>	
-									</div>
-									<div class="row">
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo3.jpg">
-										</div>
-										<div class="col-lg-6 p-t-1">
-											<img src="img/trabajo4.jpg">
-										</div>	
-									</div>
-    							</div>
-  							</div>
-						</nav>
 						<div id="carousel-tablet" class="carousel slide" data-ride="carousel">
   							<ol class="carousel-indicators">
 								<li data-target="#carousel-tablet" data-slide-to="0" class="active"></li>
@@ -406,7 +324,7 @@
       								<div class="car-lap-blog"></div>
     							</div>
     							<div class="carousel-item">
-      								<div class="car-lap-port"></div>
+      								<div class="car-lap-eco"></div>
     							</div>
     							<div class="carousel-item">
       								<div class="car-lap-user"></div>
@@ -429,7 +347,6 @@
 	<section id="contacto">
 		<article class="contacto container">
 			<div class="caja-titulo">
-			    <div id="spinner" class="title rotate">/</div>
 				<h2 class="contactame">CONTACTAME</h2>			
 			</div>
 			<div class="row text-xs-center m-y-3">
