añadiendo efecto gato

--- a/index.html
+++ b/index.html
@@ -236,32 +236,40 @@
     							<div class="carousel-item active">
       								<div class="car-lap-trello">
       									<div class="desc-trello-porta">
-      										<h4 class="p-t-3">DEMO TRELLO</h4>
-      										<p class="p-b-3">Una página creada en similitud a la agenda virtual trello; se hizo con HTML, CSS, bootstrap y javascript puro.</p>
+      										<a target="_blank" href="https://spectrecode.github.io/trello/">
+      											<h4 class="p-t-3">DEMO TRELLO</h4>
+	      										<p class="p-b-3">Una página creada en similitud a la agenda virtual trello; se hizo con HTML, CSS, bootstrap y javascript puro.</p>
+      										</a>
       									</div>
       								</div>
     							</div>
 								<div class="carousel-item">
       								<div class="car-lap-blog">
       									<div class="desc-blog-porta">
-      										<h4 class="p-t-3">RESPONSIVE BLOG</h4>
-      										<p class="p-b-3">Bonita pagina simulando un blog; fue realizado con HTML, CSS y como estructura se uso la grilla Dallas Simple Grid.</p>
+      										<a target="_blank" href="https://spectrecode.github.io/responsive-blog/">
+      											<h4 class="p-t-3">RESPONSIVE BLOG</h4>
+      											<p class="p-b-3">Bonita pagina simulando un blog; fue realizado con HTML, CSS y como estructura se uso la grilla Dallas Simple Grid.</p>
+      										</a>
       									</div>
       								</div>
     							</div>
     							<div class="carousel-item">
       								<div class="car-lap-eco">
       									<div class="desc-eco-porta">
-      										<h4 class="p-t-3">ECOMUNIDAD</h4>
-      										<p class="p-b-3">Hicimos una página simulando un portafolio; se usó HTML, CSS y como estructura se utilizo la grilla Simple Grid.</p>
-      									</div>
+      										<a target="_blank" href="https://spectrecode.github.io/ecomunidad/">
+      											<h4 class="p-t-3">ECOMUNIDAD</h4>
+      											<p class="p-b-3">Hicimos una página simulando un pagina de interes escológico y de voluntariado; se usó HTML, CSS y Simple grid como grilla.</p>
+      										</a>		
+	      								</div>
       								</div>
     							</div>
     							<div class="carousel-item">
       								<div class="car-lap-user">
       									<div class="desc-user-porta">
-	      									<h4 class="p-t-3">USER TESTING</h4>
-	      									<p class="p-b-3">Simulacion de interfaz de una página que testea y/o contabiliza la cantidad de personas que visitan un sitio web; realizado con HTML, CSS y como estructura una grilla llamada simple grid.</p>
+      										<a target="_blank" href="https://spectrecode.github.io/user-testing/">
+	      										<h4 class="p-t-3">USER TESTING 360</h4>
+	      										<p class="p-b-3">Simulacion de interfaz de una página que testea y/o contabiliza la cantidad de personas que visitan un sitio web; realizado con HTML, CSS y como estructura una grilla llamada simple grid.</p>
+	      									</a>
       									</div>
       								</div>
     							</div>
