--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
     								<div class="carousel-item active">
       									<div class="car-lap-trello">
       										<div class="desc-trello-porta">
-      											<a target="_blank" href="http://walon.mediaimpact.digital/">
-      												<h4 class="p-t-3">DEMO WALON</h4>
-	      											<p class="p-b-3">Desarrollo de la página oficial de Walon</p>
+      											<a target="_blank" href="https://spectrecode.github.io/trello/">
+      												<h4 class="p-t-3">DEMO TRELLO</h4>
+	      											<p class="p-b-3">Una página creada en similitud a la agenda virtual trello; se hizo con HTML, CSS, bootstrap y javascript puro.</p>
       											</a>
       										</div>
       									</div>
@@ -253,9 +253,9 @@
 									<div class="carousel-item">
       									<div class="car-lap-blog">
       										<div class="desc-blog-porta">
-      											<a target="_blank" href="http://americas-potash.com/">
-      												<h4 class="p-t-3">AMERICAS POTASH</h4>
-      												<p class="p-b-3">Desarrollo de la página oficial de Americas Potash Perú</p>
+      											<a target="_blank" href="https://spectrecode.github.io/responsive-blog/">
+      												<h4 class="p-t-3">RESPONSIVE BLOG</h4>
+      												<p class="p-b-3">Bonita pagina simulando un blog; fue realizado con HTML, CSS y como estructura se uso la grilla Dallas Simple Grid.</p>
       											</a>
       										</div>
       									</div>
@@ -263,9 +263,9 @@
     								<div class="carousel-item">
 										<div class="car-lap-eco">
 											<div class="desc-eco-porta">
-												<a target="_blank" href="http://antoniaenelespejo.com/">
-													<h4 class="p-t-3">ANTONIA EN EL ESPEJO</h4>
-													<p class="p-b-3">Apoyo en la realización del blog oficial de la Señora Antonia del Solar.</p>
+												<a target="_blank" href="https://spectrecode.github.io/ecomunidad/">
+													<h4 class="p-t-3">ECOMUNIDAD</h4>
+													<p class="p-b-3">Hicimos una página simulando un pagina de interes escológico y de voluntariado; se usó HTML, CSS y Simple grid como grilla.</p>
 												</a>		
 											</div>
 										</div>
